# vanilla

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  about.html  app.py  base_game.py  constants.py  coverage.xml  docker-compose.yml  draft_minesweeper.html  games.html  games_breakout.py  games_geometry_dash.py  games_minesweeper.py  games_pong.py  games_snake.py  games_space_shooters.py  games_tetris.py  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scores.example.json  scores.json  server.py  sounds.js  styles.css
.github/workflows/: ci.yml
backends/: __init__.py  breakout.py  geometry_dash.py  minesweeper.py  pong.py  snake.py  space_shooters.py
breakout/: game.html  intro.html
games/breakout/: breakout.js
games/geometry-dash/: geometry-dash.js
games/minesweeper/: minesweeper.js
games/pong/: pong.js
games/snake/: snake.js
games/space-shooters/: space-shooters.js
games/tetris/: tetris.js
geometry_dash/: game.html  intro.html
js/: constants.js  menu.js  router.js
minesweeper/: game.html  intro.html
pong/: game.html  intro.html
snake/: game.html  intro.html
space_shooters/: game.html  intro.html
tests/: __init__.py  test_backends.py  test_cli.py  test_server.py
tetris/: game.html  intro.html
vanilla_collection/: __init__.py  app.py  cli.py  paths.py  py.typed  server.py
vanilla_collection/backends/: __init__.py  asteroids.py  breakout.py  flappy.py  geometry_dash.py  minesweeper.py  pacman.py  pong.py  snake.py  space_shooters.py  tetris.py
vanilla_collection/web/: about.html  achievements.js  engine.js  game-common.css  games.html  index.html  keybindings.js  manifest.json  scoreboard.js  sounds.js  styles.css  sw.js  themes.js
vanilla_collection/web/asteroids/: game.html  intro.html
vanilla_collection/web/breakout/: game.html
vanilla_collection/web/flappy/: game.html  intro.html
vanilla_collection/web/geometry_dash/: game.html
vanilla_collection/web/icons/: .gitkeep
vanilla_collection/web/minesweeper/: game.html  intro.html
vanilla_collection/web/pacman/: game.html  intro.html
vanilla_collection/web/pong/: game.html
vanilla_collection/web/snake/: game.html  intro.html
vanilla_collection/web/space_shooters/: game.html  intro.html
vanilla_collection/web/tetris/: game.html  intro.html
