[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanilla-collection"
version = "1.0.0"
description = "A collection of classic arcade games with a Python Flask backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0",
]

[project.scripts]
vanilla-collection = "vanilla_collection.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-flask>=1.1.6",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
]

# ============================================================================
# BLACK (Python Code Formatter)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.mypy_cache
    | \.pytest_cache
    | node_modules
)/
'''

# ============================================================================
# RUFF (Python Linter - faster alternative to flake8)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (sometimes needed for API compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are okay
"tests/*" = ["ARG"]       # unused arguments in tests are okay

[tool.ruff.lint.isort]
known-first-party = ["vanilla_collection"]

# ============================================================================
# SETUPTOOLS (Packaging)
# ============================================================================
[tool.setuptools.packages.find]
include = ["vanilla_collection*"]
exclude = ["tests*", "venv*", "__pycache__*", ".pytest_cache*"]

[tool.setuptools.package-data]
vanilla_collection = ["web/**/*", "py.typed"]

# ============================================================================
# MYPY (Type Checker)
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^venv/",
    "^\\.venv/",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = "flask.*"
ignore_missing_imports = true

# ============================================================================
# PYTEST (Testing)
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["vanilla_collection"]
omit = ["tests/*", "venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
